# docs/swagger.json
@@ -257,7 +257,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appointment.appointmentsListResponse"
+                            "$ref": "#/definitions/api.appointmentsListResponse"
                         }
                     },
                     "400": {
@@ -311,7 +311,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/appointment.BookInput"
+                            "$ref": "#/definitions/service.BookInput"
                         }
                     }
                 ],
@@ -319,7 +319,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/appointment.appointmentResponse"
+                            "$ref": "#/definitions/api.appointmentResponse"
                         }
                     },
                     "400": {
@@ -384,7 +384,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appointment.appointmentResponse"
+                            "$ref": "#/definitions/api.appointmentResponse"
                         }
                     },
                     "400": {
@@ -447,7 +447,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/appointment.CancelInput"
+                            "$ref": "#/definitions/service.CancelInput"
                         }
                     }
                 ],
@@ -455,7 +455,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appointment.appointmentResponse"
+                            "$ref": "#/definitions/api.appointmentResponse"
                         }
                     },
                     "400": {
@@ -514,7 +514,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appointment.appointmentResponse"
+                            "$ref": "#/definitions/api.appointmentResponse"
                         }
                     },
                     "403": {
@@ -567,7 +567,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appointment.appointmentResponse"
+                            "$ref": "#/definitions/api.appointmentResponse"
                         }
                     },
                     "403": {
@@ -620,7 +620,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appointment.appointmentResponse"
+                            "$ref": "#/definitions/api.appointmentResponse"
                         }
                     },
                     "403": {
@@ -677,7 +677,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/appointment.RescheduleInput"
+                            "$ref": "#/definitions/service.RescheduleInput"
                         }
                     }
                 ],
@@ -685,7 +685,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/appointment.appointmentResponse"
+                            "$ref": "#/definitions/api.appointmentResponse"
                         }
                     },
                     "400": {
@@ -1257,6 +1257,61 @@
         }
     },
     "definitions": {
+        "api.appointmentResponse": {
+            "type": "object",
+            "properties": {
+                "cancellation_reason": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "doctor_id": {
+                    "type": "string"
+                },
+                "end_time": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "notes": {
+                    "type": "string"
+                },
+                "patient_id": {
+                    "type": "string"
+                },
+                "start_time": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "version": {
+                    "type": "integer"
+                }
+            }
+        },
+        "api.appointmentsListResponse": {
+            "type": "object",
+            "properties": {
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/api.appointmentResponse"
+                    }
+                },
+                "limit": {
+                    "type": "integer"
+                },
+                "offset": {
+                    "type": "integer"
+                },
+                "total": {
+                    "type": "integer"
+                }
+            }
+        },
         "api.bindStaffInput": {
             "type": "object",
             "required": [
@@ -1470,7 +1525,7 @@
                 }
             }
         },
-        "appointment.BookInput": {
+        "service.BookInput": {
             "type": "object",
             "required": [
                 "doctor_id",
@@ -1498,7 +1553,7 @@
                 }
             }
         },
-        "appointment.CancelInput": {
+        "service.CancelInput": {
             "type": "object",
             "required": [
                 "reason"
@@ -1507,78 +1562,6 @@
                 "reason": {
                     "type": "string",
                     "maxLength": 1000
-                }
-            }
-        },
-        "appointment.RescheduleInput": {
-            "type": "object",
-            "required": [
-                "duration_minutes",
-                "start_time"
-            ],
-            "properties": {
-                "duration_minutes": {
-                    "type": "integer",
-                    "maximum": 480,
-                    "minimum": 5
-                },
-                "start_time": {
-                    "type": "string"
-                }
-            }
-        },
-        "appointment.appointmentResponse": {
-            "type": "object",
-            "properties": {
-                "cancellation_reason": {
-                    "type": "string"
-                },
-                "created_at": {
-                    "type": "string"
-                },
-                "doctor_id": {
-                    "type": "string"
-                },
-                "end_time": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "notes": {
-                    "type": "string"
-                },
-                "patient_id": {
-                    "type": "string"
-                },
-                "start_time": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "string"
-                },
-                "version": {
-                    "type": "integer"
-                }
-            }
-        },
-        "appointment.appointmentsListResponse": {
-            "type": "object",
-            "properties": {
-                "items": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/appointment.appointmentResponse"
-                    }
-                },
-                "limit": {
-                    "type": "integer"
-                },
-                "offset": {
-                    "type": "integer"
-                },
-                "total": {
-                    "type": "integer"
                 }
             }
         },
@@ -1615,6 +1598,23 @@
                     "minLength": 8
                 },
                 "phone": {
+                    "type": "string"
+                }
+            }
+        },
+        "service.RescheduleInput": {
+            "type": "object",
+            "required": [
+                "duration_minutes",
+                "start_time"
+            ],
+            "properties": {
+                "duration_minutes": {
+                    "type": "integer",
+                    "maximum": 480,
+                    "minimum": 5
+                },
+                "start_time": {
                     "type": "string"
                 }
             }
